refactor service, tools and resources